my first plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Vengeance Helper
+author=Marcin
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Alerts you when you can use a new vengeance
+tags=veng,vengeance, taste vengeance, lunar
+plugins=com.vengeancehelper.VengeanceHelperPlugin
